terminando requisicoes CRUD da entidade Aluno